# cpp_indie_studio

./: .gitignore  Bomberman.nsi  CMakeLists.txt  IndieStudio.nsi  Makefile  index.css  index.html  index.js  test.xml
assets/fonts/: mario16.xml  mario24.xml  marioColor36.xml
assets/models/: bob-bomb.x
assets/models/blocks/: brick.mtl  solid.mtl
assets/models/characters/koopa/: koopa.mtl
assets/models/characters/lakitu/: lakitu.mtl
assets/models/characters/shyGuy/: shyGuyBlack.mtl  shyGuyBlue.mtl  shyGuyRed.mtl  shyGuyWhite.mtl
assets/models/characters/skelerex/: skelerex.mtl
assets/models/characters/skelerex/source/: test-bones.mtl
assets/models/powers/bombPass/: bombPass.mtl
assets/models/powers/bombs/: bombDown.mtl  bombFull.mtl  bombUp.mtl  minusBomb.mtl
assets/models/powers/fires/: fireFull.mtl  fireUp.mtl
assets/models/powers/speed/: speedDown.mtl  speedUp.mtl
assets/models/powers/speeds/: speedDown.mtl  speedUp.mtl
assets/models/powers/wallPass/: wallPass.mtl
src/: AObject.cpp  AObject.hpp  ATransformableObject.cpp  ATransformableObject.hpp  AnimatedObject.cpp  AnimatedObject.hpp  BillboardObject.cpp  BillboardObject.hpp  BomberMario.cpp  Bomberman.cpp  CameraObject.cpp  CameraObject.hpp  IObject.cpp  IObject.hpp  LightObject.cpp  LightObject.hpp  PlaneObject.cpp  PlaneObject.hpp  StaticObject.cpp  StaticObject.hpp  Version.cpp  Version.hpp  main.cpp
src/Audio/: AudioBuffer.cpp  AudioBuffer.hpp  AudioDevice.cpp  AudioDevice.hpp  AudioFile.cpp  AudioFile.hpp  AudioManager.cpp  AudioManager.hpp
src/Exception/: Exception.cpp  Exception.hpp
src/Interface/: IAssetLoader.hpp  IAssetManager.hpp  IAudioListener.hpp  IAudioPlayer.hpp  IEventScene.hpp  IGameScene.hpp  IObject.hpp  IPlayerController.hpp  IRenderWindow.hpp  IRenderable.hpp  ISerializable.hpp  ITransformable.hpp
src/Map/: AMap.cpp  AMap.hpp  BomberMap.cpp  BomberMap.hpp  Map.cpp  Map.hpp  MapConstructor.cpp  MapConstructor.hpp  MapGenerator.cpp  MapGenerator.hpp  MapWall.cpp  MapWall.hpp
src/Map/MapBlocks/: AMapBlock.cpp  AMapBlock.hpp  MapBlockBreakable.cpp  MapBlockBreakable.hpp  MapBlockUnbreakable.cpp  MapBlockUnbreakable.hpp
src/Menu/: GraphicButton.cpp  GraphicButton.hpp  GraphicElement.cpp  GraphicElement.hpp  GraphicImage.cpp  GraphicImage.hpp  GraphicText.cpp  GraphicText.hpp  Menu.cpp  Menu.hpp
src/Menu/Include/: GraphicButton.hpp  Menu.hpp
src/Player/: AIController.cpp  AIController.hpp  APlayerController.cpp  APlayerController.hpp  MovementAnalyser.cpp  MovementAnalyser.hpp  Player.cpp  Player.hpp  PlayerActionner.cpp  PlayerActionner.hpp
src/Render/: EventHandler.cpp  EventHandler.hpp  GameEngine.cpp  GameEngine.hpp  GameWindow.cpp  GameWindow.hpp
src/Scene/: GameScene.cpp  GameScene.hpp  SceneGame.cpp  SceneGame.hpp  SceneLauncher.cpp  SceneLauncher.hpp
src/Scenes/: SceneLauncher.cpp  SceneLauncher.hpp
src/Scenes/General/: AActivator.cpp  AActivator.hpp  AScene.cpp  AScene.hpp  CharacterInfo.cpp  CharacterInfo.hpp  CharacterLoader.cpp  CharacterLoader.hpp  Clock.cpp  Clock.hpp  Game.cpp  Game.hpp  GameInfo.cpp  GameInfo.hpp  PersistentInfo.cpp  PersistentInfo.hpp  Player.cpp  Player.hpp  PlayerInfo.cpp  PlayerInfo.hpp
src/Scenes/SceneCharacterMenu/: SceneCharacterMenu.cpp  SceneCharacterMenu.hpp
src/Scenes/SceneGame/: Bomb.cpp  Bomb.hpp  ExplosionBlast.cpp  ExplosionBlast.hpp  SceneGame.cpp  SceneGame.hpp
src/Scenes/SceneGame/Powers/: BombDown.cpp  BombDown.hpp  BombFull.cpp  BombFull.hpp  BombPass.cpp  BombPass.hpp  BombUp.cpp  BombUp.hpp  FireDown.cpp  FireDown.hpp  FireFull.cpp  FireFull.hpp  FireUp.cpp  FireUp.hpp  Power.cpp  Power.hpp  PowerFactory.cpp  PowerFactory.hpp  SpeedDown.cpp  SpeedDown.hpp  SpeedUp.cpp  SpeedUp.hpp  WallPass.cpp  WallPass.hpp
src/Scenes/SceneHomeMenu/: SceneHomeMenu.cpp  SceneHomeMenu.hpp
src/Scenes/SceneKeyMenu/: IrrKeyToStr.cpp  IrrKeyToStr.hpp  SceneKeyMenu.cpp  SceneKeyMenu.hpp
src/Scenes/SceneOptionMenu/: SceneOptionMenu.cpp  SceneOptionMenu.hpp
src/Xml/: XmlReader.cpp  XmlReader.hpp  XmlWriter.cpp  XmlWriter.hpp
src/exception/: Exception.cpp  Exception.hpp
src/interface/: IRenderable.hpp  ISerializable.hpp  ITransformable.hpp
src/map/: Map.hpp  MapGenerator.cpp  MapGenerator.hpp  MapWall.cpp  MapWall.hpp
src/render/: GameWindow.hpp
tests/: MapGen.cpp  MenuPreview.cpp
tmp/: APlayerController.cpp
win/: BomberMario.nsi  bombermario.rc
